# Generate-report-sarg

./: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.in  README  aclocal.m4  alias.c  auth.c  authfail.c  btree_cache.c  configure  configure.ac  convlog.c  css.c  dansguardian_log.c  dansguardian_report.c  datafile.c  decomp.c  denied.c  dichotomic.c  download.c  email.c  exclude.c  filelist.c  fileobject.c  fnmatch.c  getconf.c  grepday.c  html.c  index.c  indexonly.c  ip2name.c  ip2name_dns.c  ip2name_exec.c  lastlog.c  log.c  longline.c  readlog.c  readlog_common.c  readlog_extlog.c  (+23 more)
documentation/: util.txt
include/: alias.h  conf.h  config.h.in  defs.h  filelist.h  fileobject.h  info.h  readlog.h  stringbuffer.h
po/: ChangeLog  Makevars  POTFILES.in  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  lv.gmo  lv.po  nl.gmo  nl.po  pl.gmo  pl.po  pt.gmo  pt.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  ru.gmo  (+11 more)
sarg-php/: INSTALL  LANGUAGES  config.php.inc  sarg-block-it.php  sarg-squidguard-block.php  sarg-squidguard-block2.php  translate.this  update-mo.sh  update-po.sh  url_validator.php.inc
sarg-php/locale/en_EN/LC_MESSAGES/: messages.po
sarg-php/locale/es/LC_MESSAGES/: messages.mo  messages.po
sarg-php/locale/fr/LC_MESSAGES/: messages.po
sarg-php/locale/pt_BR/LC_MESSAGES/: messages.po
sarg-php/locale/ru/LC_MESSAGES/: messages.po
